--- a/SmallDad.Core/SmallDad.Core/SmallDad.Core.csproj
+++ b/SmallDad.Core/SmallDad.Core/SmallDad.Core.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Interfaces\" />
+    <Folder Include="Interfaces\Uploads\" />
   </ItemGroup>
 
 </Project>
