--- a/SmallDad/SmallDad.csproj
+++ b/SmallDad/SmallDad.csproj
@@ -29,7 +29,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\SmallDad.Core\SmallDad.Core\SmallDad.Core.csproj" />
-    <ProjectReference Include="..\SmallDad.Infrastructure\SmallDad.Infrastructure\SmallDad.Infrastructure.csproj" />
+    <ProjectReference Include="..\SmallDad.Infrastructure\SmallDad.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
